# llynx

./: .gitignore  .llynx.toml  Cargo.toml  README.md
schemas/: .llynx.schema.json
src/: enabled.rs  installed.rs  main.rs  online.rs
tests/: .gitignore  setup.sh
tests/configs/: all_args.toml  empty_schema.toml  illegal.toml  some_args.toml
tests/settings/: empty_library.json  no_library.json  one_addon.json  one_addon_linux.json
