[package]
name = "llynx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["derive"] }
csv = "1.3.1"
jsonc-parser = { version = "0.26.2", features = ["serde"] }
log = { version = "0.4.27", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
stderrlog = "0.6.0"
thiserror = "2.0.12"

[features]
disable_before_remove = []